Testes nº 1 feitos.

--- a/src/hs/Tests/makefile
+++ b/src/hs/Tests/makefile
@@ -1,5 +1,8 @@
-all:
+all: graph c hs
+graph:
 	gcc -o c -O3 graph.c
-	gcc -o transf -O3 transf.c
+c:
+	gcc -o transf -O3 transf.c -lm
+hs:
 	ghc -pgmlo opt -pgmlc llc -fllvm -o hs Graph.hs
 
