Pequena alteração na impressao do json.

--- a/src/c/makefile
+++ b/src/c/makefile
@@ -1,4 +1,4 @@
 all: c
 c:
-	gcc -O3 -o pcope pcope.c `pkg-config --cflags --libs jansson`
+	gcc -O3 -static -o pcope pcope.c `pkg-config --cflags --libs jansson`
 
