pequena otimização para geração aleatoria gaussiana.

--- a/src/c/makefile
+++ b/src/c/makefile
@@ -1,5 +1,5 @@
 all: c
 c: converter
 converter:
-	gcc -O3 -static -o converter pcope.c converter.c util.c `pkg-config --cflags --libs jansson`
+	gcc -O3 -static -o converter pcope.c converter.c util.c -lm `pkg-config --cflags --libs jansson`
 
