--- a/doc/pubs/COCOON2014/paper/makefile
+++ b/doc/pubs/COCOON2014/paper/makefile
@@ -2,4 +2,4 @@ all: pdf clean
 pdf:
 	rubber -d paper.tex
 clean:
-	rm paper.aux paper-blx.bib paper.log paper.out paper.run.xml
+	rm -f paper.aux paper-blx.bib paper.log paper.out paper.run.xml
