Ajustando modelo para multiknap.

--- a/src/mkp/c/makefile
+++ b/src/mkp/c/makefile
@@ -1,4 +1,5 @@
 all:
-	gcc -o randmkp randmkp.c mkp.c util.c -lm
-	gcc -o mkp2zpl mkp2zpl.c mkp.c util.c -lm
-
+	gcc -o randmkp randmkp.c mmkp.c util.c -lm
+	gcc -o mkp2zpl mkp2zpl.c mmkp.c util.c -lm
+test:
+	gcc -o test.c mmkp.c util.c -lm
