Quase gerando instancia aleatoria.

--- a/src/mkp/c/makefile
+++ b/src/mkp/c/makefile
@@ -2,4 +2,4 @@ all:
 	gcc -o randmkp randmkp.c mmkp.c util.c -lm
 	gcc -o mkp2zpl mkp2zpl.c mmkp.c util.c -lm
 test:
-	gcc -o test.c mmkp.c util.c -lm
+	gcc -o test test.c util.c mmkp.c -lm
