Implementando solução MMKP.

--- a/src/mmkp/c/makefile
+++ b/src/mmkp/c/makefile
@@ -1,10 +1,12 @@
 BINDIR="../../../bin"
 all: randmmkp mmkp2zpl
-randmmkp: mmkp.o util.o
-	gcc -o randmmkp randmmkp.c mmkp.c util.c -lm
+randmmkp:
+	gcc -o randmmkp randmmkp.c mmkp/mmkp.c mmkp/util.c -lm
 	mv randmmkp $(BINDIR)
-mmkp2zpl: mmkp.o util.o
-	gcc -o mmkp2zpl mmkp2zpl.c mmkp.c util.c -lm
+mmkp2zpl:
+	gcc -o mmkp2zpl mmkp2zpl.c mmkp/mmkp.c mmkp/util.c -lm
 	mv mmkp2zpl $(BINDIR)
 test:
-	gcc -o test test.c util.c mmkp.c -lm
+	gcc -o test test.c mmkp/util.c mmkp/mmkp.c -lm
+clean:
+	rm -f *.o
