Native MKP support.

--- a/src/mmkp/c/makefile
+++ b/src/mmkp/c/makefile
@@ -1,5 +1,13 @@
 BINDIR="../../../bin"
-all: randmmkp mmkp2zpl
+all: mkp mmkp
+mkp: randmkp mkp2zpl
+randmkp:
+	gcc -o randmkp randmkp.c mmkp/mkp.c mmkp/util.c -lm
+	mv randmkp $(BINDIR)
+mkp2zpl:
+	gcc -o mkp2zpl mkp2zpl.c mmkp/mkp.c mmkp/util.c -lm
+	mv mkp2zpl $(BINDIR)
+mmkp: randmmkp mmkp2zpl
 randmmkp:
 	gcc -o randmmkp randmmkp.c mmkp/mmkp.c mmkp/util.c -lm
 	mv randmmkp $(BINDIR)
