SFL compilando, rapaiz\!\!\!

--- a/src/mmkp/c/makefile
+++ b/src/mmkp/c/makefile
@@ -29,7 +29,7 @@ mkp-nu:
 	mv mkp-nu $(BINDIR)
 mkp-sfl:
 	gcc -o mkp-sfl mkp-sfl.c mmkp/sfl.c mmkp/mkp.c mmkp/util.c $(CFLAGS)
-	mv mkp-mkp-sfl $(BINDIR)
+	mv mkp-sfl $(BINDIR)
 mmkp: mmkp-rand mmkp2zpl
 mmkp-rand:
 	gcc -o mmkp-rand mmkp-rand.c mmkp/mmkp.c mmkp/util.c $(CFLAGS)
