--- a/src/mmkp/c/makefile
+++ b/src/mmkp/c/makefile
@@ -17,7 +17,7 @@ kp-rand:
 kp-des:
 	gcc -o kp-des kp-des.c mmkp/kp.c mmkp/util.c mmkp/des.c $(CFLAGS)
 	mv kp-des $(BINDIR)
-mkp: mkp-rand mkp2zpl mkp-nu mkp-sfl
+mkp: mkp-rand mkp2zpl mkp-nu mkp-sfl mkp-simplex
 mkp-rand:
 	gcc -o mkp-rand mkp-rand.c mmkp/mkp.c mmkp/util.c $(CFLAGS)
 	mv mkp-rand $(BINDIR)
@@ -30,6 +30,9 @@ mkp-nu:
 mkp-sfl:
 	gcc -o mkp-sfl mkp-sfl.c mmkp/sfl.c mmkp/mkp.c mmkp/util.c $(CFLAGS)
 	mv mkp-sfl $(BINDIR)
+mkp-simplex:
+	gcc -o mkp-simplex mkp-simplex.c mmkp/lp.c mmkp/mkp.c mmkp/util.c $(CFLAGS)
+	mv mkp-simplex $(BINDIR)
 mmkp: mmkp-rand mmkp2zpl
 mmkp-rand:
 	gcc -o mmkp-rand mmkp-rand.c mmkp/mmkp.c mmkp/util.c $(CFLAGS)
