--- a/doc/pubs/CIARP2015/tex/makefile
+++ b/doc/pubs/CIARP2015/tex/makefile
@@ -1,5 +1,4 @@
-all: pdf clean
+all: pdf
 pdf:
-	rubber -d paper.tex
-clean:
-	rm -f paper.aux paper-blx.bib paper.log paper.out paper.run.xml
+	cat paper.tex | rubber-pipe -d > paper.pdf
+
