--- a/doc/eld/makefile
+++ b/doc/eld/makefile
@@ -1,5 +1,7 @@
-all: prova1a clear
+all: prova1a prova1b clear
 prova1a:
 	cat prova1a.tex | rubber-pipe -d > prova1a.pdf
+prova1b:
+	cat prova1b.tex | rubber-pipe -d > prova1b.pdf
 clear:
 	rm -rf rubtmp*
