--- a/doc/eld/lista2/makefile
+++ b/doc/eld/lista2/makefile
@@ -1,4 +1,7 @@
-all: pdf clean
+all: img pdf clean
+img:
+	inkscape -P cont1.ps cont1.svg
+	inkscape -A cont1.pdf cont1.svg
 pdf:
 	cat lista2.tex | rubber-pipe -d > lista2.pdf
 clean:
