--- a/doc/pubs/CIARP2015/poster/makefile
+++ b/doc/pubs/CIARP2015/poster/makefile
@@ -1,3 +1,5 @@
 all:
 	cat poster.tex | rubber-pipe -d > poster.pdf
+	inkscape -A ciarp-logo.pdf ciarp-logo.svg
+	#inkscape -p ciarp-logo.ps ciarp-logo.svg
 	rm -f rubtmp*
