--- a/doc/pubs/CIARP2015/poster/makefile
+++ b/doc/pubs/CIARP2015/poster/makefile
@@ -1,5 +1,7 @@
-all:
-	cat poster.tex | rubber-pipe -d > poster.pdf
+all: pdf
+imgs:
 	inkscape -A ciarp-logo.pdf ciarp-logo.svg
 	#inkscape -p ciarp-logo.ps ciarp-logo.svg
+pdf:
+	cat poster.tex | rubber-pipe -d > poster.pdf
 	rm -f rubtmp*
