--- a/doc/pubs/IEEE-CEC2016/poster/makefile
+++ b/doc/pubs/IEEE-CEC2016/poster/makefile
@@ -5,6 +5,7 @@ pdflatex:
 	bibtex poster.aux
 	pdflatex poster.tex
 	pdflatex poster.tex
+	cp poster.pdf poster1.pdf
 rubber:
 	cat poster.tex | rubber-pipe -d > poster.pdf
 clean:
