--- a/src/soplex/makefile
+++ b/src/soplex/makefile
@@ -1,6 +1,7 @@
-SPROOT=/home/mbaroni/Downloads/soplex-2.2.0
+SPROOT=/home/mbaroni/Computacao/phd/soplex-2.2.1
 SPINC=$(SPROOT)/src
 SPLIB=$(SPROOT)/lib
 CARGS=-O3
 all:
-	g++ -o sop sop.cpp -I$(SPINC) -L$(SPLIB) $(CARGS) -lsoplex -lz
+	#g++ -o example example.cpp -I$(SPINC) -L$(SPLIB) $(CARGS) -lsoplex -lz
+	g++ -o example example.cpp $(CARGS) -lsoplex -lz -lgmp
