implementada kdtree. Escrevendo artigo.

--- a/src/makefile
+++ b/src/makefile
@@ -7,8 +7,8 @@ SOPLEX=-lsoplex -lz -lgmp -lm
 
 all: mkp
 mkp: mkp-nu mkp-rand mkp2zpl
-mkp-nu: util.o mkp.o domset.o lp.o soputils.o mkp-nu.o balev.o lbucket.o
-	g++ $(CFLAGS) -o mkp-nu mkp-nu.o util.o lp.o mkp.o balev.o domset.o soputils.o lbucket.o -lm $(SOPLEX) $(DEBUG_FLAG)
+mkp-nu: util.o mkp.o domset.o lp.o soputils.o mkp-nu.o balev.o lbucket.o ppm.o
+	g++ $(CFLAGS) -o mkp-nu mkp-nu.o util.o lp.o mkp.o balev.o domset.o soputils.o lbucket.o ppm.o -lm $(SOPLEX) $(DEBUG_FLAG)
 	mv mkp-nu $(DEST)
 mkp-rand: mkp.o util.o lp.o
 	gcc $(CFLAGS) -o mkp-rand tools/mkp-rand.c mkp.o util.o lp.o -lm
@@ -29,6 +29,8 @@ balev.o:
 	gcc $(CFLAGS) -c models/mkp/balev.c
 lbucket.o:
 	gcc $(CFLAGS) -c models/mkp/lbucket.c
+ppm.o:
+	gcc $(CFLAGS) -c utils/ppm.c -lm
 
 mkp.o:
 	gcc -c models/mkp/mkp.c
