refatoracao do arquivo soputils

--- a/src/makefile
+++ b/src/makefile
@@ -7,17 +7,17 @@ SOPLEX=-lsoplex -lz -lgmp -lm
 
 all: mkp
 mkp: mkp-nu mkp-rand mkp2zpl
-mkp-nu: util.o mkp.o domset.o lp.o soputils.o mkp-nu.o balev.o lbucket.o ppm.o
-	g++ $(CFLAGS) -o mkp-nu mkp-nu.o util.o lp.o mkp.o balev.o domset.o soputils.o lbucket.o ppm.o -lm $(SOPLEX) $(DEBUG_FLAG)
+mkp-nu: util.o mkp.o domset.o lp.o mkp-soputils.o mkp-nu.o balev.o lbucket.o ppm.o
+	g++ $(CFLAGS) -o mkp-nu mkp-nu.o util.o lp.o mkp.o balev.o domset.o mkp-soputils.o lbucket.o ppm.o -lm $(SOPLEX) $(DEBUG_FLAG)
 	mv mkp-nu $(DEST)
 mkp-rand: mkp.o util.o lp.o
 	gcc $(CFLAGS) -o mkp-rand tools/mkp-rand.c mkp.o util.o lp.o -lm
 	mv mkp-rand $(DEST)
-mkp2zpl: mkp.o util.o lp.o soputils.o mkp2zpl.o
-	g++ $(CFLAGS) -o mkp2zpl mkp2zpl.o mkp.o util.o lp.o soputils.o -lm $(SOPLEX)
+mkp2zpl: mkp.o util.o lp.o mkp-soputils.o mkp2zpl.o
+	g++ $(CFLAGS) -o mkp2zpl mkp2zpl.o mkp.o util.o lp.o mkp-soputils.o -lm $(SOPLEX)
 	mv mkp2zpl $(DEST)
-soputils.o:
-	g++ $(CFLAGS) -c models/mkp/soputils.cpp $(SOPLEX)
+mkp-soputils.o:
+	g++ $(CFLAGS) -c models/mkp/mkp-soputils.cpp $(SOPLEX)
 mkp-nu.o:
 	gcc $(CFLAGS) -c tools/mkp-nu.c
 mkp2zpl.o:
