Ferramenta para diagnostico de memoria

--- a/src/makefile
+++ b/src/makefile
@@ -2,7 +2,7 @@
 #  Flags:
 #   NO_KDTREE_STATS: Disable kdtree statistics
 CC = gcc
-CFLAGS=-g
+CFLAGS=-g -DUSE_MEMPOOL
 DEST=../bin
 DEBUG_FLAG=-DDEBUG_LVL=1
 SOPLEX=-lsoplex -lz -lgmp -lm
@@ -39,6 +39,8 @@ mkp.o:
 domset.o:
 	gcc -c models/mkp/domset.c
 
+mem.o:
+	gcc $(CFLAGS) -c utils/mem.c
 lp.o:
 	gcc -c utils/lp.c
 avl.o:
@@ -57,8 +59,8 @@ test: util.o avl.o heap.o
 	mv test $(DEST)
 
 mkp.o: utils/util.c
-mokp: mokp.o tmokp.o util.o mkp.o lp.o mkp-soputils.o order.o kdtree.o avl.o heap.o bazgan.o list.o
-	g++ $(CFLAGS) -o mokp tmokp.o mokp.o mkp.o util.o lp.o mkp-soputils.o order.o bazgan.o kdtree.o avl.o heap.o list.o -lm $(SOPLEX)
+mokp: mokp.o tmokp.o util.o mkp.o lp.o mkp-soputils.o order.o kdtree.o avl.o heap.o bazgan.o list.o mem.o
+	g++ $(CFLAGS) -o mokp tmokp.o mokp.o mkp.o util.o lp.o mkp-soputils.o order.o bazgan.o kdtree.o avl.o mem.o heap.o list.o -lm $(SOPLEX)
 	mv mokp $(DEST)
 mokp.o:
 	gcc $(CFLAGS) -c models/mokp/mokp.c
