--- a/src/makefile
+++ b/src/makefile
@@ -4,7 +4,7 @@
 CC = gcc
 #CFLAGS=-g -DUSE_MEMPOOL
 #CFLAGS=-g -DDEBUG_LVL=1
-CFLAGS=-g $(DEBFLAG)
+CFLAGS=-g $(DEBFLAG) -pg
 #CFLAGS=-g
 DEST=../bin
 SOPLEX=-lsoplex -lz -lgmp -lm
@@ -61,8 +61,9 @@ test: util.o avl.o heap.o
 	mv test $(DEST)
 
 mkp.o: utils/util.c
-mokp: mokp.o tmokp.o util.o mkp.o lp.o mkp-soputils.o order.o kdtree.o avl.o heap.o bazgan.o list.o
-	g++ $(CFLAGS) -o mokp tmokp.o mokp.o mkp.o util.o lp.o mkp-soputils.o order.o bazgan.o kdtree.o avl.o heap.o list.o -lm $(SOPLEX)
+mokp: mokp.o tmokp.o util.o lp.o order.o kdtree.o avl.o heap.o bazgan.o list.o
+	#g++ $(CFLAGS) -o mokp tmokp.o mokp.o mkp.o util.o lp.o mkp-soputils.o order.o bazgan.o kdtree.o avl.o heap.o list.o -lm $(SOPLEX)
+	gcc $(CFLAGS) -o mokp tmokp.o mokp.o util.o lp.o order.o bazgan.o kdtree.o avl.o heap.o list.o -lm $(SOPLEX)
 	mv mokp $(DEST)
 mokp.o:
 	gcc $(CFLAGS) -c models/mokp/mokp.c
