impressao de erro avl

--- a/src/makefile
+++ b/src/makefile
@@ -4,7 +4,7 @@
 CC = gcc
 #CFLAGS=-g -DUSE_MEMPOOL
 #CFLAGS=-g -DDEBUG_LVL=1
-CFLAGS=-g $(DEBFLAG) -pg
+CFLAGS=-g $(DEBFLAG)
 #CFLAGS=-g
 DEST=../bin
 SOPLEX=-lsoplex -lz -lgmp -lm
