correcao de leak em mokp_reord

--- a/src/makefile
+++ b/src/makefile
@@ -4,8 +4,8 @@
 CC = gcc
 #CFLAGS=-g -DUSE_MEMPOOL
 #CFLAGS=-g -DDEBUG_LVL=1
-CFLAGS=-g $(DEBFLAG) #-pg
-#CFLAGS=-O3
+#CFLAGS=-g $(DEBFLAG) -pg
+CFLAGS=-O3
 DEST=../bin
 SOPLEX=-lsoplex -lz -lgmp -lm
 
