inicio sobre kdtree

--- a/doc/pubs/MOKP-DP-2017/makefile
+++ b/doc/pubs/MOKP-DP-2017/makefile
@@ -4,7 +4,10 @@ TDIR=tex
 all: pdf clean
 pdf: pdflatex
 pdflatex:
+	latex $(TARGET).tex
+	bibtex $(TARGET).aux
+	latex $(TARGET).tex
 	pdflatex $(TARGET).tex
 clean:
-	rm -f *.aux *.log
+	rm -f *.aux *.log *.bbl *.blg *.dvi
 
