criando grafico dom

--- a/doc/pubs/MOKP-DP-2017/makefile
+++ b/doc/pubs/MOKP-DP-2017/makefile
@@ -1,13 +1,16 @@
 TARGET=paper
-TDIR=tex
 
 all: pdf clean
-pdf: pdflatex
-pdflatex:
+pdf: dvipdf
+pdflatex: latex
+	pdflatex $(TARGET).tex
+dvipdf: latex
+	dvipdf $(TARGET).dvi
+	#ps2pdf $(TARGET).ps
+latex:
 	latex $(TARGET).tex
 	bibtex $(TARGET).aux
 	latex $(TARGET).tex
-	pdflatex $(TARGET).tex
 clean:
-	rm -f *.aux *.log *.bbl *.blg *.dvi
+	rm -f *.aux *.log *.bbl *.blg *.dvi *.ps
 
