--- a/doc/pubs/MOKP-DP-2017/makefile
+++ b/doc/pubs/MOKP-DP-2017/makefile
@@ -11,6 +11,7 @@ latex:
 	latex $(TARGET).tex
 	bibtex $(TARGET).aux
 	latex $(TARGET).tex
+	latex $(TARGET).tex
 clean:
 	rm -f *.aux *.log *.bbl *.blg *.dvi *.ps
 
