--- a/src/makefile
+++ b/src/makefile
@@ -11,7 +11,7 @@ CFLAGS=-g
 DEST=../bin
 SOPLEX=-lsoplex -lz -lgmp -lm
 
-all: mkp mokp
+all: mokp
 mkp: mkp-nu mkp-rand mkp2zpl
 mkp-nu: util.o mkp.o domset.o lp.o mkp-soputils.o mkp-nu.o balev.o lbucket.o ppm.o
 	g++ $(CFLAGS) -o mkp-nu mkp-nu.o util.o lp.o mkp.o balev.o domset.o mkp-soputils.o lbucket.o ppm.o -lm $(SOPLEX) $(DEBUG_FLAG)
