investigando diferenca nas solucoes usando ndim diferentes

--- a/src/makefile
+++ b/src/makefile
@@ -6,7 +6,7 @@ CC = gcc
 #CFLAGS=-g -DDEBUG_LVL=1
 #CFLAGS=-g $(DEBFLAG) -pg 
 PROFFLAGS=-pg --no-pie -fPIC
-CFLAGS=-g
+CFLAGS=-g -D COUNT_COMPARISON
 #CFLAGS=-O3
 DEST=../bin
 SOPLEX=-lsoplex -lz -lgmp -lm
