ferramenta check_gmon (auxilio para gprof)

--- a/src/makefile
+++ b/src/makefile
@@ -7,7 +7,7 @@ CC = gcc
 #CFLAGS=-g $(DEBFLAG) -pg 
 PROFFLAGS=-pg --no-pie -fPIC
 #CFLAGS=-g -D COUNT_COMPARISON
-CFLAGS=-g
+CFLAGS=-g $(PROFFLAGS)
 #CFLAGS=-O3
 DEST=../bin
 #SOPLEX=-lsoplex -lz -lgmp -lm soplex/soplex-3.1.0/lib/libsoplex-3.1.0.linux.x86_64.gnu.opt.a
