--- a/src/makefile
+++ b/src/makefile
@@ -5,7 +5,8 @@ CC = gcc
 #CFLAGS=-g -DUSE_MEMPOOL
 #CFLAGS=-g -DDEBUG_LVL=1
 #CFLAGS=-g $(DEBFLAG) -pg 
-PROFFLAGS=-pg --no-pie -fPIC
+#PROFFLAGS=-pg --no-pie -fPIC
+PROFFLAGS=--no-pie -fPIC
 #CFLAGS=-g -D COUNT_COMPARISON
 CFLAGS=-g $(PROFFLAGS)
 #CFLAGS=-O3
